# Phase-Pong

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci-debug.yml  ci-release-deploy.yml  codeql-analysis.yml
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
core_cpp/: CMakeLists.txt
core_cpp/src/: main.cpp
docs/: BUILDING.md
